--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pixels of Me</title>
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500&family=Nunito:wght@300;400;600&display=swap" rel="stylesheet">
-    <link rel=""stylesheet" href=""styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
