--- a/index.html
+++ b/index.html
@@ -1,23 +1,42 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pixels of Me</title>
-    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500&family=Nunito:wght@300;400;600&display=swap" rel="stylesheet">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Winter Bytes | Veena's Digital Haven</title>
     <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Lato:wght@300&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <header>
-        <h1>Explore My World, One Pixel at a Time</h1>
+        <nav>
+            <ul style="display: flex; justify-content: flex-start; list-style: none; padding: 0;">
+                <li style="margin-right: 20px;"><a href="about.html">ABOUT ME</a></li>
+                <li style="margin-right: 20px;"><a href="projects.html">PROJECTS</a></li>
+                <li><a href="contact.html">CONTACT</a></li>
+            </ul>
+        </nav>
+        <!-- <div style="display: flex;">
+            <div class="logo" style="margin-left: auto;">
+              <img src="path-to-your-logo.png" alt="Logo" />
+            </div>
+          </div> -->
     </header>
-    <main>
-        <p> This is the main content of your webpage </p>
-    </main>
+
+    <section id="home">
+        <div class="content">
+          <h2>Welcome to Winter Bytes</h2>
+          <p>Welcome to my corner of the web! I’m so glad you’re here. This is where I share the work and ideas that inspire me, and I’m excited to take you along on this journey. Feel free to explore, and I hope you find something that sparks your curiosity and creativity. Thank you for visiting!</p>
+        </div>
+        <!-- <div class="image">
+          <img src="your-image.jpg" alt="A creative illustration">
+        </div> -->
+      </section>
+      
+    
     <footer>
-        <p> &copy; 2024 Veena Vadakkathmana Ramadas </p>
-    </footer>
+        <p>&copy; 2024 Winter Bytes | All rights reserved. Illustrations by Valerie Aethra.</p>
+      </footer>      
 </body>
 </html>
